<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <ImageView
        android:id="@+id/homeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unavailable"
        android:maxHeight="220dp"
        android:maxWidth="220dp"
        android:minHeight="220dp"
        android:minWidth="220dp"
        android:src="@drawable/ic_question_150" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="8" >

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/unavailable"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/valuationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/valuation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/highValuationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/high_valuation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lowValuationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/low_valuation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lowValuationTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="3"
            android:paddingRight="5dp"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/valuationTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:paddingRight="5dp"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/highValuationTextView"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="2"
            android:paddingRight="5dp"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/propertyDetailTitletextView"
            android:layout_width="218dp"
            android:layout_column="0"
            android:layout_gravity="top|left|center|fill"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:text="@string/property_details_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/propertySpecificsTextView"
            android:layout_width="fill_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="5"
            android:paddingRight="5dp"
            android:text="@string/property_specifics"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/footnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"
            android:layout_row="7"
            android:gravity="center|bottom"
            android:text="@string/tap_for_options"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

    </GridLayout>

</LinearLayout>